<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/distance"
        android:inputType="number"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/total_de_quilometros"
        android:gravity="center"/>

    <EditText
        android:id="@+id/edit_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/preco"
        android:inputType="numberDecimal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="2dp"
        android:layout_height="wrap_content"
        android:text="@string/preco_por_litro"
        android:gravity="center"/>

    <EditText
        android:id="@+id/edit_autonomy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/autonomia"
        android:inputType="numberDecimal"/>

    <TextView
        android:id="@+id/quilimetros_por_litro"
        android:layout_width="match_parent"
        android:layout_marginTop="2dp"
        android:layout_height="wrap_content"
        android:text="@string/quilometros_por_litro"
        android:gravity="center"/>

    <TextView
        android:id="@+id/gasto_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gasto_total"
        android:gravity="center"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:layout_marginTop="32dp"/>

    <TextView
        android:id="@+id/text_total_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/r"
        android:gravity="center"
        android:textAllCaps="true"
        android:textSize="38sp"
        android:textColor="#673AB7"
        android:layout_marginTop="32dp"/>

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/calcular"
        android:textSize="20sp"
        android:layout_marginTop="32dp"/>

</LinearLayout>